# musik

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md
.github/workflows/: audit.yml  rust.yml
examples/hsom-exercises/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  ch7.rs  ch8.rs  ch9.rs  main.rs
src/: instruments.rs  lib.rs  music.rs
src/io/midi/: codec.rs  mod.rs  transport.rs
src/music/: adapters.rs  combinators.rs  constructors.rs  control.rs  duration.rs  interval.rs  iter_like.rs  macro.rs  mod.rs  ops.rs  ornaments.rs  perf.rs  performance.rs  phrase.rs  phrases.rs  pitch.rs  transform.rs
src/music/perf/: interpretations.rs  mod.rs  player.rs
src/output/midi/: convert.rs  instruments.rs  io.rs  mod.rs  player.rs
src/prim/: duration.rs  interval.rs  mod.rs  note.rs  pitch.rs  scale.rs  volume.rs
src/prim/helpers/: mod.rs  music.rs  note.rs  octave.rs  pitch.rs  pitch_class.rs
src/utils/: iter.rs  measure.rs  mod.rs  ref.rs
src/utils/iter/: append_single.rs  lazy_list.rs  lazy_sort.rs  mod.rs  partition.rs
