[package]
name = "musik"
version = "0.1.0"
edition = "2021"
authors = ["Ivan L <tsionyx@gmail.com>"]
keywords = ["music"]
description = "Musical theory and audio signals concepts inspired by HSoM book"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tsionyx/musik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4"
num-integer = "0.1"
num-traits = "0.2"
enum-map ="2.6"
enum-iterator = "1.4"
ordered-float = "4.2"
itertools = "0.12"

# MIDI stuff
midly = "0.5"
midir = "0.9"
