[package]
name = "musik"
version = "0.1.0"
edition = "2021"
authors = ["Ivan L <tsionyx@gmail.com>"]
keywords = ["music"]
description = "Musical theory and audio signals concepts inspired by HSoM book"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tsionyx/musik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = { version = "0.4", default_features = false, features = ["std"] }
num-integer = "0.1"
num-traits = "0.2"
enum-map ="2.6"
enum-iterator = "1.4"
ordered-float = "4.2"
itertools = "0.12"

# MIDI stuff
midly = { version = "0.5", default_features = false, features = ["std"] }
midir = { version = "0.9", optional = true }

# graceful shutdown
ctrlc = { version = "3.4", optional = true }
once_cell = { version = "1.19", optional = true }

[features]
play-midi = ["midir", "ctrlc", "once_cell"]
default = ["play-midi"]
